# LumberjackAPI

./: .gitmodules  Doxyfile.in  README.md  meson.build
.github/workflows/: meson.yml
examples/: temp.cpp
src/: lumberjack.hpp  lumberjack_api_defs.hpp  lumberjack_basic.cpp  lumberjack_impl.hpp  lumberjack_module.cpp
subprojects/: gtest.wrap
tests/: LumberjackUnitTests.cpp
